--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,8 +21,9 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASS
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --piperuao26/expres-randomquotes:latest
+      run: docker build . --file Dockerfile --tag piperuao26/expres-randomquotes:latest
       
     - name: Docker Push
       run: docker push piperuao26/expres-randomquotes
+
 
